--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -3,14 +3,9 @@
 {% block title %}Лента записей{% endblock %}
 
 {% block content %}
-  <div class="container py-5">
-    <h1>Лента записей</h1>
-    {% for post in posts %}
-      <hr>
-      {% include 'blog/post_common.html' %}
-      <p>{{ post.text|truncatewords:10 }}</p>
-      <br>
-      <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
-    {% endfor %}
-  </div>
+  <h1>Лента записей</h1>
+  {% for post in posts %}
+    <hr>
+    {% include 'includes/post_common.html' with is_full_text=False %}
+  {% endfor %}
 {% endblock %}
