--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -6,5 +6,5 @@
 {% endblock %}
 
 {% block content %}
-  {% include 'includes/post_common.html' with is_full_text=True %}
+  {% include 'blog/includes/post_common.html' with is_full_text=True %}
 {% endblock %}
