--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -6,6 +6,6 @@
   <h1>Лента записей</h1>
   {% for post in posts %}
     <hr>
-    {% include 'includes/post_common.html' with is_full_text=False %}
+    {% include 'blog/includes/post_common.html' with is_full_text=False %}
   {% endfor %}
 {% endblock %}
